samples/_failures_safe/1761126466_563a21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68bdb459.c: In function ‘main’:
./samples/SAFE/__tmp_68bdb459.c:144:5: error: expected expression at end of input
  144 |     if (
      |     ^~
./samples/SAFE/__tmp_68bdb459.c:144:5: error: expected declaration or statement at end of input
